# breezecatalina

./: CMakeLists.txt  README.md  breeze.h  breeze.json  breezeboxshadowrenderer.cpp  breezeboxshadowrenderer.h  breezebutton.cpp  breezebutton.h  breezedecoration.cpp  breezedecoration.h  breezesettingsdata.kcfg  breezesettingsprovider.cpp  breezesizegrip.cpp  breezesizegrip.h
config/: breezecatalinaconfig.desktop  breezeconfigwidget.cpp
config/ui/: breezeconfigurationui.ui
